--- a/app/src/main/res/layout/fragment_sign_up_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email.xml
@@ -4,6 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".view.sign.SignUpEmailFragment">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.hyeeyoung.wishboard.viewmodel.SignViewModel" />
+
+        <import type="com.hyeeyoung.wishboard.R" />
+
+        <import type="androidx.navigation.Navigation" />
+
+        <import type="android.view.View" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,6 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:background="@android:color/transparent"
+                android:onClick="@{v -> Navigation.findNavController(v).navigate(R.id.action_email_to_sign_in)}"
                 android:src="@drawable/ic_back"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -66,6 +80,8 @@
                 android:hint="@string/email_input_text"
                 android:includeFontPadding="false"
                 android:inputType="textEmailAddress"
+                android:onTextChanged="@{viewModel::onEmailTextChanged}"
+                android:text="@{viewModel.userEmail}"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/email_icon"
@@ -84,8 +100,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/selector_button"
-            android:enabled="false"
             android:fontFamily="@font/nanum_square_eb"
+            android:onClick="@{v -> Navigation.findNavController(v).navigate(R.id.action_email_to_password)}"
             android:outlineProvider="none"
             android:text="@string/next"
             android:textColor="@color/gray_700"
