[mod] 회원 가입 레이아웃에서 이메일 및 패스워드 EditText 뷰모델 연결

--- a/app/src/main/res/layout/fragment_sign_up_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email.xml
@@ -80,7 +80,7 @@
                 android:hint="@string/email_input_text"
                 android:includeFontPadding="false"
                 android:inputType="textEmailAddress"
-                android:onTextChanged="@{viewModel::onEmailTextChanged}"
+                android:onTextChanged="@{viewModel.onEmailTextChanged}"
                 android:text="@{viewModel.userEmail}"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
