--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -80,6 +80,8 @@
                 android:hint="@string/password_input_text"
                 android:includeFontPadding="false"
                 android:inputType="textEmailAddress"
+                android:onTextChanged="@{viewModel.onPasswordTextChanged}"
+                android:text="@{viewModel.userPassword}"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/password_icon"
