[mod] 회원가입 레이아웃에서 패스워드 EditText의 InputType 수정 및 다음 버튼 비활성화 처리 해제

--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -79,7 +79,7 @@
                 android:background="@android:color/transparent"
                 android:hint="@string/password_input_text"
                 android:includeFontPadding="false"
-                android:inputType="textEmailAddress"
+                android:inputType="textPassword"
                 android:onTextChanged="@{viewModel.onPasswordTextChanged}"
                 android:text="@{viewModel.userPassword}"
                 android:textSize="15dp"
@@ -100,7 +100,6 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/selector_button"
-            android:enabled="false"
             android:fontFamily="@font/nanum_square_eb"
             android:outlineProvider="none"
             android:text="@string/next"
