[feat] 로그인 프로세스 구현

--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -80,8 +80,8 @@
                 android:hint="@string/password_input_text"
                 android:includeFontPadding="false"
                 android:inputType="textPassword"
-                android:onTextChanged="@{viewModel.onPasswordTextChanged}"
-                android:text="@{viewModel.userPassword}"
+                android:onTextChanged="@{viewModel::onRegistrationPasswordTextChanged}"
+                android:text="@{viewModel.registrationPassword}"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/password_icon"
@@ -101,6 +101,7 @@
             android:layout_height="50dp"
             android:background="@drawable/selector_button"
             android:fontFamily="@font/nanum_square_eb"
+            android:onClick="@{() -> viewModel.signUp()}"
             android:outlineProvider="none"
             android:text="@string/next"
             android:textColor="@color/gray_700"
