--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -50,7 +50,7 @@
             app:layout_constraintTop_toBottomOf="@id/title_container">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerview_wish_list"
+                android:id="@+id/wish_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbarFadeDuration="0"
