--- a/app/src/main/res/layout/item_wish.xml
+++ b/app/src/main/res/layout/item_wish.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="item"
+            type="com.hyeeyoung.wishboard.model.WishItem" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/item"
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -28,6 +34,7 @@
             android:fontFamily="@font/nanum_square_eb"
             android:textColor="@color/gray_700"
             android:textSize="13dp"
+            android:text="@{item.name}"
             app:layout_constraintStart_toStartOf="@id/item_image"
             app:layout_constraintTop_toBottomOf="@id/item_image"
             tools:text="name" />
@@ -40,6 +47,7 @@
             android:fontFamily="@font/nanum_square_b"
             android:textColor="@color/gray_700"
             android:textSize="13dp"
+            android:text="@{item.price}"
             app:layout_constraintStart_toStartOf="@id/item_name"
             app:layout_constraintTop_toBottomOf="@id/item_name"
             tools:text="price" />
