--- a/app/src/main/res/layout/fragment_wish_item_detail.xml
+++ b/app/src/main/res/layout/fragment_wish_item_detail.xml
@@ -2,17 +2,29 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="">
+    tools:context=".view.home.wishitem.WishItemDetailFragment">
+
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.hyeeyoung.wishboard.viewmodel.WishViewModel" />
+
+        <import type="androidx.navigation.Navigation" />
+
+        <import type="com.hyeeyoung.wishboard.R" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/title_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp"
+            android:paddingBottom="20dp"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
@@ -20,6 +32,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
+                android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
+                android:padding="20dp"
                 android:src="@drawable/ic_back"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -28,19 +42,23 @@
                 android:id="@+id/folder_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginStart="20dp"
                 android:fontFamily="@font/nanum_square_eb"
+                android:text="@{viewModel.wishItem.folderName}"
                 android:textColor="@color/gray_700"
                 android:textSize="15dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/back"
                 tools:text="폴더명" />
 
+            <!-- TODO 날짜 포맷 변경 필요 -->
             <TextView
                 android:id="@+id/create_at"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
+                android:layout_marginEnd="20dp"
                 android:fontFamily="@font/nanum_square_r"
+                android:text="@{viewModel.wishItem.createAt}"
                 android:textColor="@color/gray_200"
                 android:textSize="13dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -125,6 +143,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/nanum_square_eb"
+                        android:text="@{viewModel.wishItem.name}"
                         android:textAllCaps="false"
                         android:textColor="@color/gray_700"
                         android:textSize="17dp"
@@ -140,6 +159,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nanum_square_eb"
+                            android:text="@{viewModel.wishItem.price}"
                             android:textColor="@color/gray_700"
                             android:textSize="17dp"
                             tools:text="129,000" />
@@ -156,12 +176,14 @@
 
                     </LinearLayout>
 
+                    <!-- TODO 알림 유형 및 날짜 포맷 변경 필요 -->
                     <TextView
                         android:id="@+id/noti_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:fontFamily="@font/nanum_square_b"
+                        android:text="@{viewModel.wishItem.notiDate}"
                         android:textColor="@color/gray_700"
                         android:textSize="15dp"
                         tools:text="8월 22일 22시 재입고 " />
@@ -198,7 +220,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="2dp"
                 android:background="@android:color/transparent"
-                android:onClick="onClick"
                 android:src="@drawable/ic_trash"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -210,7 +231,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:background="@android:color/transparent"
-                android:onClick="onClick"
                 android:src="@drawable/ic_edit"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/delete"
@@ -221,10 +241,8 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:layout_marginEnd="16dp"
                 android:background="@drawable/background_button_green"
                 android:fontFamily="@font/nanum_square_b"
-                android:onClick="onClick"
                 android:paddingHorizontal="35dp"
                 android:text="@string/go_to_shop_btn_text"
                 android:textColor="@color/gray_700"
