--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -2,7 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="">
+    tools:context=".view.cart.CartFragment">
+
+    <data>
+
+        <import type="androidx.navigation.Navigation" />
+    </data>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,13 +18,15 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp">
+            android:padding="8dp">
 
             <ImageButton
                 android:id="@+id/back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:padding="12dp"
+                android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
                 android:background="@android:color/transparent"
                 android:src="@drawable/ic_back"
                 app:layout_constraintStart_toStartOf="parent"
@@ -34,12 +41,13 @@
                 android:textColor="@color/gray_700"
                 android:textSize="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview_cart_list"
+            android:id="@+id/cart_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" />
@@ -92,7 +100,7 @@
                 android:layout_marginRight="2dp"
                 android:layout_toLeftOf="@id/won"
                 android:fontFamily="@font/nanum_square_eb"
-                android:text="238,000"
+                tools:text="238,000"
                 android:textColor="@color/gray_700"
                 android:textSize="17dp"
                 app:layout_constraintEnd_toStartOf="@id/won"
