--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -4,6 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".view.my.MyFragment">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.hyeeyoung.wishboard.viewmodel.MyViewModel" />
+
+        <import type="com.hyeeyoung.wishboard.R" />
+
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -54,11 +64,11 @@
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/user_profile_image"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:src="@mipmap/ic_main"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:src="@drawable/sample" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="wrap_content"
@@ -75,6 +85,7 @@
                         android:layout_marginBottom="10dp"
                         android:fontFamily="@font/noto_sans_kr_bold"
                         android:includeFontPadding="false"
+                        android:text="@{String.format(context.getString(R.string.my_nickname_format_for_users_without_nickname), viewModel.userNickname)}"
                         android:textColor="@color/white"
                         android:textSize="20dp"
                         app:layout_constraintBottom_toTopOf="@id/user_email"
@@ -87,6 +98,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/nanum_square_r"
                         android:includeFontPadding="false"
+                        android:text="@{viewModel.userEmail}"
                         android:textColor="@color/white"
                         android:textSize="13dp"
                         app:layout_constraintBottom_toBottomOf="parent"
