--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="transparent">#00000000</color>
     <color name="semiTransparent">#1A000000</color>
     <color name="ultraSemiTransparent">#10000000</color>
+    <color name="black_transparent_500">#38000000</color>
 
     <color name="green_500">#73F87C</color>
     <color name="green_100">#EEFEEF</color>
