[mod] 아이템 fetch api Hearder 수정 및 수정사항 적용

--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -52,7 +52,7 @@
 
             <!-- TODO Padding 조정 필요-->
             <ImageView
-                android:id="@+id/x"
+                android:id="@+id/delete"
                 android:layout_width="12dp"
                 android:layout_height="12dp"
                 android:background="@android:color/transparent"
