--- a/app/src/main/res/layout/fragment_wish.xml
+++ b/app/src/main/res/layout/fragment_wish.xml
@@ -15,7 +15,6 @@
             android:id="@+id/title_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
@@ -25,6 +24,7 @@
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
                 android:text="@string/item_registration_title"
+                android:padding="20dp"
                 android:textColor="@color/gray_700"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -40,6 +40,8 @@
                 android:fontFamily="@font/nanum_square_r"
                 android:onClick="onClick"
                 android:text="@string/save"
+                android:layout_marginEnd="8dp"
+                android:padding="12dp"
                 android:textColor="@color/gray_700"
                 android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
