[chore] price TextView 천단위로 포맷 변경

--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -114,7 +114,7 @@
                 android:layout_toLeftOf="@id/won"
                 android:fontFamily="@font/nanum_square_eb"
                 tools:text="238,000"
-                android:text="@{item.price}"
+                app:priceFormat="@{item.price}"
                 android:textColor="@color/gray_700"
                 android:textSize="17dp" />
 
