--- a/app/src/main/res/layout/fragment_wish_item_detail.xml
+++ b/app/src/main/res/layout/fragment_wish_item_detail.xml
@@ -159,7 +159,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/nanum_square_eb"
-                            android:text="@{viewModel.wishItem.price}"
+                            app:priceFormat="@{viewModel.wishItem.price}"
                             android:textColor="@color/gray_700"
                             android:textSize="17dp"
                             tools:text="129,000" />
