--- a/app/src/main/res/navigation/wish_item_registration_nav_graph.xml
+++ b/app/src/main/res/navigation/wish_item_registration_nav_graph.xml
@@ -2,14 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/wish_item_nav_graph"
-    app:startDestination="@id/wishItemDetailFragment">
-
-    <fragment
-        android:id="@+id/wishItemDetailFragment"
-        android:name="com.hyeeyoung.wishboard.view.wish.item.screens.WishItemDetailFragment"
-        android:label="fragment_wish_item_detail"
-        tools:layout="@layout/fragment_wish_item_detail" />
+    android:id="@+id/wish_item_registration_nav_graph"
+    app:startDestination="@id/wishFragment">
 
     <fragment
         android:id="@+id/wishFragment"
@@ -25,5 +19,5 @@
         android:id="@+id/galleryImageFragment"
         android:name="com.hyeeyoung.wishboard.view.common.screens.GalleryImageFragment"
         android:label="fragment_gallery_image"
-        tools:layout="@layout/fragment_gallery_image" />
+        tools:layout="@layout/fragment_gallery_image"/>
 </navigation>
