[mod] 수량 버튼 클릭 시마다 updateCart 요청 및 view에서 count와 price TextView가 업데이트 되도록 코드 수정

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -30,6 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:background="@android:color/transparent"
+                android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
                 android:padding="12dp"
                 android:src="@drawable/ic_back"
                 app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:fontFamily="@font/nanum_square_eb"
-                android:text="@{Integer.toString(viewModel.totalCount)}"
+                android:text="@{Integer.toString(viewModel.cartList.size())}"
                 android:textColor="@color/gray_700"
                 android:textSize="17dp"
                 app:layout_constraintStart_toEndOf="@id/total_text"
