--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -114,7 +114,7 @@
                 android:layout_toLeftOf="@id/won"
                 android:fontFamily="@font/nanum_square_eb"
                 tools:text="238,000"
-                app:priceFormat="@{item.wishItem.price}"
+                app:priceFormat="@{item.wishItem.price * item.cartItemInfo.count}"
                 android:textColor="@color/gray_700"
                 android:textSize="17dp" />
 
