[chore] WishViewModel에서 WishListViewModel로 파일명 수정

--- a/app/src/main/res/layout/fragment_wish_item_detail.xml
+++ b/app/src/main/res/layout/fragment_wish_item_detail.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="viewModel"
-            type="com.hyeeyoung.wishboard.viewmodel.WishViewModel" />
+            type="com.hyeeyoung.wishboard.viewmodel.WishListViewModel" />
 
         <import type="androidx.navigation.Navigation" />
 
