--- a/app/src/main/res/layout/fragment_wish_item_detail.xml
+++ b/app/src/main/res/layout/fragment_wish_item_detail.xml
@@ -220,6 +220,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="2dp"
                 android:background="@android:color/transparent"
+                android:onClick="@{() -> viewModel.deleteWishItem()}"
                 android:src="@drawable/ic_trash"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
