--- a/app/src/main/res/layout/fragment_wish.xml
+++ b/app/src/main/res/layout/fragment_wish.xml
@@ -10,6 +10,8 @@
             name="viewModel"
             type="com.hyeeyoung.wishboard.viewmodel.WishItemRegistrationViewModel" />
 
+        <import type="androidx.navigation.Navigation" />
+
         <import type="android.view.View" />
     </data>
 
@@ -26,20 +28,16 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/title"
+            <ImageButton
+                android:id="@+id/back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/noto_sans_kr_bold"
-                android:includeFontPadding="false"
+                android:background="@android:color/transparent"
+                android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
                 android:padding="20dp"
-                android:text="@string/item_registration_title"
-                android:textColor="@color/gray_700"
-                android:textSize="20dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:src="@drawable/ic_back"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="@string/item_registration_title" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/save"
