--- a/app/src/main/res/navigation/wish_item_registration_nav_graph.xml
+++ b/app/src/main/res/navigation/wish_item_registration_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/wishFragment"
-        android:name="com.hyeeyoung.wishboard.view.wish.item.screens.WishFragment"
+        android:name="com.hyeeyoung.wishboard.view.wish.item.screens.WishBasicFragment"
         android:label="fragment_wish"
         tools:layout="@layout/fragment_wish">
         <action
