[mod] 장바구니 화면에서 totalPrice view에 천단위 구분자 적용

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -105,11 +105,11 @@
                 android:layout_marginRight="2dp"
                 android:layout_toLeftOf="@id/won"
                 android:fontFamily="@font/nanum_square_eb"
-                android:text="@{Integer.toString(viewModel.totalPrice)}"
                 android:textColor="@color/gray_700"
                 android:textSize="17dp"
                 app:layout_constraintEnd_toStartOf="@id/won"
                 app:layout_constraintTop_toTopOf="parent"
+                app:priceFormat="@{viewModel.totalPrice}"
                 tools:text="0" />
 
             <TextView
