[mod] 디테일 화면에서 알림 정보 보여주기 방식을 날짜 -> 날짜 + 알림 타입으로 변경

--- a/app/src/main/res/layout/fragment_wish_item_detail.xml
+++ b/app/src/main/res/layout/fragment_wish_item_detail.xml
@@ -183,10 +183,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:fontFamily="@font/nanum_square_b"
-                        android:text="@{viewModel.wishItem.notiDate}"
+                        android:text="@{viewModel.wishItem.notiType == null ? `` : viewModel.wishItem.notiDate + ` ` + context.getString(viewModel.wishItem.notiType.strRes)}"
                         android:textColor="@color/gray_700"
                         android:textSize="15dp"
-                        tools:text="8월 22일 22시 재입고 " />
+                        tools:text="8월 22일 22시 재입고" />
 
                     <TextView
                         android:id="@+id/tag"
