[fix] 기본 등록에서 가격 입력 시 crash 발생하는 버그 수정

--- a/app/src/main/res/layout/fragment_wish.xml
+++ b/app/src/main/res/layout/fragment_wish.xml
@@ -204,13 +204,13 @@
                             android:gravity="right"
                             android:hint="@string/price_input_text"
                             android:inputType="number"
+                            android:text="@{viewModel.itemPrice}"
                             android:onTextChanged="@{viewModel::onItemPriceTextChanged}"
                             android:paddingVertical="12dp"
-                            android:text="@{viewModel.itemPrice}"
+                            android:selection="@{viewModel.itemPrice.length()}"
                             android:textColor="@color/gray_700"
                             android:textColorHint="@color/gray_200"
-                            android:textSize="13sp"
-                            android:selection="@{viewModel.itemPrice.length()}" />
+                            android:textSize="13sp" />
                     </LinearLayout>
 
                     <LinearLayout
